Changelog
=========


1.1.13 (unreleased)
-------------------

- Drop Plone 4.1 support. [jone]


1.1.12 (2016-09-26)
-------------------

- Fix bad widget JS declaration in order to support chameleon. [jone]


1.1.11 (2014-10-02)
-------------------

- Fix JavaScript error when having a negative GMT timezone.
  [jone]


1.1.10 (2014-09-08)
-------------------

- JavaScript: make init_datepicker function public.
  This is useful in combination with AJAX.
  [jone]


1.1.9 (2014-04-23)
------------------

- Respect Start and End year of Plone.
  [tschanzt]


1.1.8 (2013-08-26)
------------------

- Fix month picking for Plone 4.3 jQuery version.
  [jone]


1.1.7 (2013-03-17)
------------------

- Plone 4.3 support, The DateTimeWidget changed.
  [mathias.leimgruber]


1.1.6 (2013-01-30)
------------------

- Do not use a square to mark required field, this will be done by CSS.
  [Julian Infanger]


1.1.5 (2013-01-21)
------------------

- onegov.ch approved: add badge to readme.
  [jone]

- Make ftw_calendar.js fire the 'calendar_after_change' event again.
  [tschanzt]

- Don't split date with '/' use '-' instead.
  [tschanzt]


1.1.4 (2012-10-16)
------------------

- Fixed widget selecting wrong month.
  [Julian Infanger]

- Fix IE8 issues.
  [mathias.leimgruber]

- Added test setup and some integration tests.
  [mathias.leimgruber]

- Fix communication between datepick widget and select fields.
  [mathias.leimgruber]


1.1.3 (2012-08-24)
------------------

- Fix missing Label.
  [tschanzt]


1.1.2 (2012-03-09)
------------------

- Prepare for public release.
  [jone]


1.1.1 (2012-03-07)
------------------

- Fix Manifest.in (include .rst)
  [mathias.leimgruber]


1.1 (2012-03-05)
----------------

- Code cleanup and documentation.


1.0c2 (2011-04-01)
------------------

- Little bit refactoring, because of some js errors.
  Added calendar_after_change jquery event on at-field-wrapper element.
  [mathias.leimgruber]


1.0c1 (2011-02-02)
------------------
