@@ -5,6 +5,8 @@ Changelog
 1.1.13 (unreleased)
 -------------------
 
+- Remove unused helper JavaScript in the widget configuration. [mbaechtold]
+
 - Drop Plone 4.1 support. [jone]
 
 
